--- a/editor.html
+++ b/editor.html
@@ -134,7 +134,7 @@
                         <div class="select-dropdown" id="model-dropdown">
                             <div class="select-search">
                                 <i data-lucide="search" class="search-icon"></i>
-                                <input type="text" placeholder="Search models..." id="model-search">
+                                <input type="text" placeholder="Search models..." id="model-search" maxlength="200">
                             </div>
                             <div class="select-options" id="model-options"></div>
                         </div>
@@ -564,7 +564,7 @@
 
                         <div class="sandbox-input-area">
                             <div class="sandbox-input-wrapper">
-                                <textarea id="sandbox-sbs-input" class="sandbox-input" placeholder="Send to both models..." rows="1"></textarea>
+                                <textarea id="sandbox-sbs-input" class="sandbox-input" placeholder="Send to both models..." rows="1" maxlength="30000"></textarea>
                                 <button class="sandbox-send-btn" id="sandbox-sbs-send" disabled>
                                     <i data-lucide="arrow-up"></i>
                                 </button>
@@ -781,7 +781,7 @@
                             <a id="api-key-docs-link" href="https://openrouter.ai/keys" target="_blank" rel="noopener" style="color:var(--accent-primary);margin-left:4px;">Get key →</a>
                         </p>
                         <div class="settings-input-group">
-                            <input type="password" id="api-key-input" class="settings-input" placeholder="sk-or-v1-...">
+                            <input type="password" id="api-key-input" class="settings-input" placeholder="sk-or-v1-..." maxlength="500">
                             <button class="settings-input-btn" id="toggle-key-visibility">
                                 <i data-lucide="eye-off" id="key-eye-icon"></i>
                             </button>
@@ -823,7 +823,7 @@
                                 <i data-lucide="palette" style="width:14px;height:14px;color:var(--accent-designer);"></i>
                                 Designer
                             </span>
-                            <input type="text" id="team-designer-model" class="settings-input settings-input-sm" placeholder="e.g. google/gemini-2.5-flash">
+                            <input type="text" id="team-designer-model" class="settings-input settings-input-sm" placeholder="e.g. google/gemini-2.5-flash" maxlength="200">
                         </div>
 
                         <div class="team-model-row">
@@ -831,7 +831,7 @@
                                 <i data-lucide="kanban" style="width:14px;height:14px;color:var(--accent-pm);"></i>
                                 PM
                             </span>
-                            <input type="text" id="team-pm-model" class="settings-input settings-input-sm" placeholder="e.g. anthropic/claude-sonnet-4">
+                            <input type="text" id="team-pm-model" class="settings-input settings-input-sm" placeholder="e.g. anthropic/claude-sonnet-4" maxlength="200">
                         </div>
 
                         <div class="team-model-row">
@@ -839,7 +839,7 @@
                                 <i data-lucide="code-2" style="width:14px;height:14px;color:var(--accent-developer);"></i>
                                 Developer
                             </span>
-                            <input type="text" id="team-developer-model" class="settings-input settings-input-sm" placeholder="e.g. deepseek/deepseek-chat-v3">
+                            <input type="text" id="team-developer-model" class="settings-input settings-input-sm" placeholder="e.g. deepseek/deepseek-chat-v3" maxlength="200">
                         </div>
                     </div>
 
@@ -861,7 +861,7 @@
 
                         <div class="settings-sub-group">
                             <label class="settings-sublabel">Custom Model (optional)</label>
-                            <input type="text" id="enhancer-model-input" class="settings-input settings-input-sm" placeholder="Leave empty to use active model">
+                            <input type="text" id="enhancer-model-input" class="settings-input settings-input-sm" placeholder="Leave empty to use active model" maxlength="200">
                         </div>
 
                         <div class="settings-sub-group">
