--- a/editor.html
+++ b/editor.html
@@ -355,6 +355,11 @@
                                     <i data-lucide="archive"></i>
                                 </button>
                             </div>
+                            <button class="code-action-btn" id="github-push-btn" title="Push to GitHub" onclick="GitHub.showPushModal()" style="display:none;">
+                                <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor">
+                                    <path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"/>
+                                </svg>
+                            </button>
                             <button class="code-action-btn" id="console-btn" title="Toggle Console">
                                 <i data-lucide="terminal"></i>
                             </button>
@@ -444,7 +449,6 @@
                         <h2 class="sandbox-title">
                             <i data-lucide="message-circle" class="sandbox-title-icon"></i>
                             Sandbox
-                            <span class="beta-badge">BETA</span>
                         </h2>
                     </div>
                     <div class="sandbox-header-center">
@@ -789,6 +793,26 @@
                         <div class="api-key-status" id="api-key-status"></div>
                     </div>
 
+                    <!-- GitHub Token -->
+                    <div class="settings-group">
+                        <label class="settings-label">
+                            <i data-lucide="github" class="settings-label-icon"></i>
+                            GitHub Token
+                            <span style="font-size:0.65rem;color:var(--text-tertiary);font-weight:400;margin-left:6px;">Optional</span>
+                        </label>
+                        <p class="settings-desc">
+                            Push your projects to GitHub. Token stays in your browser.
+                            <a href="https://github.com/settings/tokens/new?scopes=repo&description=AetherIDE" target="_blank" rel="noopener" style="color:var(--accent-primary);margin-left:4px;">Generate token →</a>
+                        </p>
+                        <div class="settings-input-group">
+                            <input type="password" id="github-token-input" class="settings-input" placeholder="ghp_..." maxlength="500">
+                            <button class="settings-input-btn" id="toggle-gh-token-visibility">
+                                <i data-lucide="eye-off" id="gh-token-eye-icon"></i>
+                            </button>
+                        </div>
+                        <div id="github-token-status" style="margin-top:6px;font-size:0.72rem;"></div>
+                    </div>
+
                     <!-- Default Model -->
                     <div class="settings-group">
                         <label class="settings-label">
@@ -1051,7 +1075,7 @@
                     <div class="settings-about">
                         <img src="assets/icons/icon-192.png" alt="AetherIDE" class="about-logo-img">
                         <div class="about-name">AetherIDE</div>
-                        <div class="about-version">v1.5.2</div>
+                        <div class="about-version">v1.5.3</div>
                         <div class="about-tagline">Code at the speed of thought</div>
                         <div class="about-links">
                             <a href="https://discord.gg/7YKCvPzKEQ" target="_blank" rel="noopener" class="about-link discord-link">
@@ -1099,7 +1123,7 @@
     <!-- Service Worker — Aggressive Update -->
     <script>
     (function() {
-        var APP_VERSION = '1.5.2';
+        var APP_VERSION = '1.5.3';
         var STORED_VERSION = localStorage.getItem('aetheride_app_version');
 
         // Versiyon değiştiyse tüm cache'leri temizle
@@ -1210,6 +1234,7 @@
     <script src="js/modes/direct.js"></script>
     <script src="js/modes/planner.js"></script>
     <script src="js/modes/team.js"></script>
+    <script src="js/github.js"></script>
     <script src="js/sandbox.js"></script>
     <script src="js/settings.js"></script>
     <script src="js/setup.js"></script>
