--- a/editor.html
+++ b/editor.html
@@ -35,6 +35,9 @@
     <!-- Lucide Icons CDN -->
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js" defer></script>
 
+    <!-- Puter.js SDK (Free AI provider) -->
+    <script src="https://js.puter.com/v2/" defer></script>
+
     <!-- Styles -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/sidebar.css">
@@ -769,6 +772,13 @@
                                 <div class="provider-info">
                                     <span class="provider-name">OpenAI</span>
                                     <span class="provider-desc">GPT models direct</span>
+                                </div>
+                            </button>
+                            <button class="provider-option" data-provider="puter">
+                                <i data-lucide="globe"></i>
+                                <div class="provider-info">
+                                    <span class="provider-name">Puter (Free)</span>
+                                    <span class="provider-desc">Free AI · No API key needed</span>
                                 </div>
                             </button>
                         </div>
